<resources>
    <string name="app_name">FavouriteDishExample</string>

    <string name="title_all_dishes">All Dishes</string>
    <string name="title_favourite_dishes">Favourite</string>
    <string name="title_random_dish">Random Dish</string>

    <string name="splash_screen_title">Favourite\nDish</string>
    <string name="add_dish">Add Dish</string>
    <string name="label_title">Title</string>
    <string name="label_type">Type</string>
    <string name="label_category">Category</string>
    <string name="label_ingredients">Ingredients</string>
    <string name="label_cooking">Cooking Time In Minutes</string>
    <string name="label_direction">Direction To Cook</string>
    <string name="button_add_dish">Add Dish</string>
    <string name="title_select_image_action">Select Image Action</string>
    <string name="label_camera">Camera</string>
    <string name="label_gallery">Gallery</string>

    <string name="title_select_dish_type">SELECT DISH TYPE</string>
    <string name="title_select_dish_category">SELECT DISH CATEGORY</string>
    <string name="title_select_dish_cooking_time">SELECT COOKING TIME IN MINUTES</string>

    <string name="error_msg_select_dish_image">Select dish image.</string>
    <string name="error_msg_enter_dish_title">Enter dish title.</string>
    <string name="error_msg_select_dish_type">Select dish type.</string>
    <string name="error_msg_select_dish_category">Select dish category.</string>
    <string name="error_msg_enter_dish_ingredients">Enter dish ingredients.</string>
    <string name="error_msg_select_dish_cooking_time">Select dish cooking time.</string>
    <string name="error_msg_enter_dish_cooking_instructions">Enter dish cooking instructions.</string>
    <string name="label_no_dishes_added_yet">No dishes added yet!!!</string>

    <string name="title_dish_details">Dish Details</string>

    <string name="label_estimate_cooking_time">The approx time required to cook the dish is %1$s minutes.</string>

    <string name="message_added_to_favourites">You have added the dish to your favourites</string>
    <string name="message_removed_from_favourites">You have removed the dish from your favourites</string>

    <string name="label_no_favourite_dishes_added_yet">No favourite dishes added yet!!!</string>

    <string name="action_edit_dish">EDIT DISH</string>
    <string name="action_delete_dish">DELETE DISH</string>

    <string name="title_edit_dish">Edit Dish</string>
    <string name="title_add_dish">Add Dish</string>
    <string name="label_update_dish">UPDATE DISH</string>

    <string name="title_delete_dish">Delete Dish</string>
    <string name="message_delete_dish_dialog">Are you sure you want to delete %1$s.</string>
    <string name="label_yes">Yes</string>
    <string name="label_no">No</string>

    <string name="action_filter_dishes">Filter Dishes</string>
    <string name="title_select_item_to_filter">SELECT ITEM TO FILTER</string>

    <string name="message_already_added_to_favourites">You have already added the dish to your favourites</string>

    <string name="please_wait">Please wait!</string>

    <string name="action_share_dish">Share Dish</string>

</resources>